[metadata]
name = autogen-cli
version = 0.0.0
author = codeweaverxyz
description = autogen-cli
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/codeweaverxyz/autogen-cli
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
